<resources>
    <string name="dapp_list_placeholder">List of DApps will appear here</string>
    <string name="dapp_authorized_remove_title">Remove from Authorized?</string>
    <string name="dapp_authorized_remove_description">“%s” DApp will be removed from Authorized</string>
    <string name="dapp_catalog">Catalog</string>
    <string name="dapp_authorized_title">Authorized DApps</string>
    <string name="dapp_authorized_description">DApps to which you allowed access to see your address when you use them</string>
    <string name="common_title">Title</string>
    <string name="common_save">Save</string>
    <string name="dapp_favourites_add">Add to favorites</string>
    <string name="dapp_favourites_remove_title">Remove from Favorites?</string>
    <string name="dapp_favourites_remove_description">“%s” DApp will be removed from Favorites</string>
    <string name="common_remove">Remove</string>
    <string name="dapp_favourites">Favorites</string>
    <string name="common_zero_amount_error">Amount must be positive</string>
    <string name="dapp_phishing_title">Phishing detected</string>
    <string name="dapp_phishing_subtitle">Nova Wallet believes that this website could compromise the security of your accounts and your tokens</string>
    <string name="dapp_phishing_go_back">Okay, take me back</string>
    <string name="staking_start_change_validators_recommended_subtitle">Nova Wallet will select the top validators based on security and profitability criteria</string>
    <string name="staking_nominations_rewarded_format" formatted="false">%s rewarded</string>
    <string name="common_status">Status</string>
    <string name="staking_nominated">Nominated:</string>
    <string name="staking_change_controller">Change controller</string>
    <string name="staking_controller">Controller</string>
    <string name="staking_stash">Stash</string>
    <string name="common_find_out_more">Find out more</string>
    <string name="staking_set_controller_title">Improve staking security</string>
    <string name="staking_set_controller_subtitle">Select another account as a controller to delegate staking management operations to it</string>
    <string name="staking_pending_rewards_title">Rewards are paid every 2–3 days by validators</string>
    <string name="staking_pending_rewards_subtitle">You can payout them by yourself, when they are close to expire, but you will pay the fee</string>
    <string name="common_how_it_works">How it works</string>
    <string name="staking_payout">Payout</string>
    <string name="staking_reward_destination_payout">Transferable rewards</string>
    <string name="staking_unbond_too_big">Amount you want to unstake is greater than staked balance</string>
    <string name="staking_rebond_counted_next_era_hint">Returned tokens will be counted from the next era</string>
    <string name="staking_change_validators">Change validators</string>
    <string name="staking_set_validators">Set validators</string>
    <string name="staking_recommended_filter_identity_subtitle">with at least one identity contact</string>
    <string name="staking_rebond_custom">Custom amount</string>
    <string name="staking_rebond_all">All unstaking</string>
    <string name="staking_rebond_last">Latest unstake</string>
    <string name="staking_select_payout_account">Select payout account</string>
    <string name="staking_rewards_about">About rewards</string>
    <string name="staking_reward_destination">Reward destination</string>
    <string name="staking_stake_format">Stake %s</string>
    <string name="common_cannot_open_link">Cannot open this link</string>
    <string name="wallet_send_tokens_on">Send %s on</string>
    <string name="common_validation_invalid_address_title">Invalid recipient</string>
    <string name="common_validation_invalid_address_message">Recipient should be a valid %s address</string>
    <string name="common_paste">Paste</string>
    <string name="wallet_sender">Sender</string>
    <string name="wallet_recipient">Recipient</string>
    <string name="wallet_transfer_details_send_back">Send to this contact</string>
    <string name="common_transaction_id">Transaction ID</string>
    <string name="common_type">Type</string>
    <string name="nft_price_not_listed">Not listed</string>
    <string name="common_price">Price</string>
    <string name="nft_collection">Collection</string>
    <string name="nft_owned_by">Owned by</string>
    <string name="nft_created_by">Created by</string>
    <string name="nft_issuance_unlimited">Unlimited series</string>
    <string name="nft_issuance_limited_format">#%s Edition of %s</string>
    <string name="nft_your_nfts">Your NFTs</string>
    <string name="wallet_assets_empty">Your assets will appear here.\nMake sure the "Hide zero balances" filter is turned off</string>
    <string name="wallet_filter_hide_zero_balance">Hide assets with zero balances</string>
    <string name="wallet_send_existential_warnining_transfer_dust">Your account will be removed from blockchain after transfer cause it makes total balance lower than minimal. Remaining balance will be transferred to recipient as well.</string>
    <string name="wallet_send_dead_recipient_commission_asset_title">Recipient is not able to accept transfer</string>
    <string name="wallet_send_dead_recipient_commission_asset_message">Your transfer will fail since the destination account does not have enough %s to accept other token transfers</string>
    <string name="wallet_send_insufficient_balance_commission">You don\'t have enough %s to pay fees</string>
    <string name="dapp_browser_close_warning_message">Are you sure you want to close this screen?\nYour changes will not be applied.</string>
    <string name="common_close">Close</string>
    <string name="dapp_search_hint">Search by name or enter URL</string>
    <string name="common_all">All</string>
    <string name="dapp_sign_extrinsic_details_subtitle">Make sure the operation is correct</string>
    <string name="dapp_sign_extrinsic_failed">Failed to sign requested operation</string>
    <string name="common_network">Network</string>
    <string name="common_account_address">Account address</string>
    <string name="dapp_confirm_authorize_title_format">Allow “%s” to access your account addresses?</string>
    <string name="dapp_dapp">DApp</string>
    <string name="dapp_confirm_authorize_subtitle">Approve this request if you trust the application</string>
    <string name="dapp_confirm_sign_extrinsic_subtitle">Approve this request if you trust the application.\nCheck the transaction details.</string>
    <string name="common_reject">Reject</string>
    <string name="common_allow">Allow</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_github_v2_2_0">Github</string>
    <string name="about_privacy">Privacy policy</string>
    <string name="about_rate_app">Rate us</string>
    <string name="about_telegram_v2_2_0">Telegram</string>
    <string name="about_terms">Terms and conditions</string>
    <string name="about_terms_v2_2_0">Terms &amp; Conditions</string>
    <string name="about_title">About</string>
    <string name="about_version">App version</string>
    <string name="about_version_template" translatable="false">Nova Wallet v%s</string>
    <string name="about_website_v2_2_0">Website</string>
    <string name="account_add_already_exists_message">Account already exists. Please, try another one.</string>
    <string name="account_backup_mnemonic_field_title">Mnemonic Passphrase</string>
    <string name="account_backup_mnemonic_title">Write down the phrase and store it in a safe place</string>
    <string name="account_backup_secret_caption">Please make sure to write down your phrase correctly and legibly.</string>
    <string name="account_confirm_mnemonic">Confirm mnemonic</string>
    <string name="account_confirm_mnemonic_subtitle">Select the words in the right order.</string>
    <string name="account_confirm_mnemonic_title">Let’s double check it</string>
    <string name="account_confirmation_details">Choose words in the right order</string>
    <string name="account_create_account">Create a new account</string>
    <string name="account_create_details_v2_2_0">Do not use clipboard or screenshots on your mobile device, try to find secure methods for backup (e.g. paper)</string>
    <string name="account_create_name_subtitle_v2_2_0">Name will be used only locally in this application. You can edit it later</string>
    <string name="account_create_name_title_v2_2_0">Create wallet name</string>
    <string name="account_create_title">Backup mnemonic</string>
    <string name="account_creation_info">Mnemonic is used to recover access to account. Write it down, we will not be able to recover your account without it!</string>
    <string name="account_custom_secret">Accounts with a changed secret</string>
    <string name="account_delete_confirm">Forget</string>
    <string name="account_delete_confirmation_description">Make sure you have exported your account before proceeding.</string>
    <string name="account_delete_confirmation_title">Forget account?</string>
    <string name="account_derivation_path_ethereum_invalid_title">Invalid Ethereum derivation path</string>
    <string name="account_derivation_path_substrate_invalid_title">Invalid Substrate derivation path</string>
    <string name="account_error_try_another_one">Please, try another one.</string>
    <string name="account_ethereum_crypto_type">Ethereum keypair crypto type</string>
    <string name="account_ethereum_derivation_path">Ethereum secret derivation path</string>
    <string name="account_export">Export account</string>
    <string name="account_export_action">Export</string>
    <string name="account_export_json_password_subtitle">This is necessary to encrypt the data and save the JSON file.</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_edit">Edit</string>
    <string name="contact_support">Contact Support</string>
    <string name="create_a_password">Create a Password</string>
    <string name="create_a_password_dots">Create a password…</string>
    <string name="password_create_hint">This password will unlock your wallet\nand encrypt all your accounts.</string>
    <string name="create_password">Create Password</string>
    <string name="finish">Finish</string>
    <string name="setup_complete">Setup Complete!</string>
    <string name="setup_complete_hint">Connect with our community to stay up to date with feature updates and opportunities.</string>
    <string name="join_discord">Join our Discord</string>
    <string name="join_twitter">Follow us on Twitter</string>
    <string name="error_too_short">Must be at least 8 characters</string>
    <string name="verify_password">Verify password</string>
    <string name="password">Password</string>
    <string name="close">Close</string>
    <string name="import_wallet_hint">When entering your 12 or 24 mnemonic seed phrase please separate each word with a single space and double check the spelling carefully.\n\nEntering a Polkadot address will import a ‘Watch Only’ account. For more help visit our <b>‘import a wallet’</b> wiki page.</string>
    <string name="help_importing_a_wallet">Help — Importing a Wallet</string>
    <string name="or">Or</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="need_help">Need Help?</string>
    <string name="import_using_secret">Import using secret recovery phrase</string>
    <string name="unlock">Unlock</string>
    <string name="address">Address:</string>
    <string name="new_contact">New Contact</string>
    <string name="enter_name">Enter name</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="enter_public_address">Enter public address, ENS</string>
    <string name="optional">Optional</string>
</resources>