<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <io.novafoundation.nova.feature_account_impl.presentation.view.RegisterIndicatorView
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:pi_progress="3" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextHeadingsH3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/margin_26"
                    android:gravity="center"
                    android:text="@string/create_a_password"
                    android:textColor="@color/contentPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/progress" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    style="@style/TextBodyRegularMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_26"
                    android:text="@string/password_create_hint"
                    android:textColor="@color/contentSecondary"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <io.novafoundation.nova.common.view.InputFieldView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/margin_26"
                    app:if_ime_option="next"
                    app:if_input_type="password"
                    app:if_label_hint="@string/error_too_short"
                    app:if_text_hint="@string/create_a_password_dots"
                    app:if_title="@string/password"
                    app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

                <io.novafoundation.nova.common.view.InputFieldView
                    android:id="@+id/tvConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_26"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="@dimen/margin_26"
                    app:if_ime_option="done"
                    app:if_input_type="password"
                    app:if_text_hint="@string/create_a_password_dots"
                    app:if_title="@string/verify_password"
                    app:layout_constraintTop_toBottomOf="@+id/tvPassword" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <io.novafoundation.nova.common.view.RectButtonView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_26"
            android:layout_marginEnd="@dimen/margin_26"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:rect_button_enabled="false"
            app:rect_button_ic_end="@drawable/ic_size_24_arrow_right"
            app:rect_button_text="@string/create_password" />

    </LinearLayout>

</layout>
