<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_brand_2">

        <ImageView
            android:id="@+id/circle"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/circle_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tick_gradient"
            app:layout_constraintBottom_toBottomOf="@id/circle"
            app:layout_constraintEnd_toEndOf="@id/circle"
            app:layout_constraintStart_toStartOf="@id/circle"
            app:layout_constraintTop_toTopOf="@id/circle"
            app:tint="@color/indigo500" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextHeadingsH3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_26"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/margin_26"
            android:gravity="center"
            android:text="@string/setup_complete"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/circle" />


        <TextView
            android:id="@+id/tvSubTitle"
            style="@style/TextBodyRegularSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_26"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_26"
            android:gravity="center"
            android:text="@string/setup_complete_hint"
            android:textColor="@color/contentSecondary"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <io.novafoundation.nova.feature_account_impl.presentation.view.SocialButtonView
            android:id="@+id/btnDiscord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
            app:social_icon="@drawable/ic_discord"
            app:social_text="@string/join_discord" />

        <io.novafoundation.nova.feature_account_impl.presentation.view.SocialButtonView
            android:id="@+id/btnTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDiscord"
            app:social_icon="@drawable/ic_twitter"
            app:social_text="@string/join_twitter" />

        <io.novafoundation.nova.common.view.RectButtonView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_26"
            android:layout_marginEnd="@dimen/margin_26"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:rect_button_text="@string/finish" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>