<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_26"
                android:src="@drawable/ic_size_24_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvToolbarTitle"
                style="@style/TextBodyBoldLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_contact"
                android:textColor="@color/contentPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnAction"
                style="@style/TextBodyBoldMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/common_edit"
                android:textColor="@color/indigo500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imCircle"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/circle_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/neutral100" />

                <ImageView
                    android:id="@+id/imCircleContent"
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:src="@drawable/ic_size_24_address"
                    app:layout_constraintBottom_toBottomOf="@id/imCircle"
                    app:layout_constraintEnd_toEndOf="@id/imCircle"
                    app:layout_constraintStart_toStartOf="@id/imCircle"
                    app:layout_constraintTop_toTopOf="@+id/imCircle"
                    app:tint="@color/neutral200" />

                <io.novafoundation.nova.common.view.InputFieldView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:if_text_hint="@string/enter_name"
                    app:if_title="Name"
                    app:layout_constraintTop_toBottomOf="@+id/imCircle"
                    app:layout_goneMarginStart="32dp" />

                <io.novafoundation.nova.common.view.InputFieldView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:if_multiline="true"
                    app:if_text_hint="@string/enter_public_address"
                    app:if_title="@string/address"
                    app:if_label_hint="@string/address_will_be_reformated"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    app:layout_goneMarginStart="32dp" />

                <io.novafoundation.nova.common.view.InputFieldView
                    android:id="@+id/tvMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:if_text_hint="@string/contact_memo_hint"
                    app:if_title="Memo"
                    app:if_title_desc="@string/optional"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddress"
                    app:layout_goneMarginStart="32dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <io.novafoundation.nova.common.view.RectButtonView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:rect_button_type="secondary"
            app:rect_button_text="@string/common_cancel" />

        <io.novafoundation.nova.common.view.RectButtonView
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_goneMarginStart="24dp"
            app:rect_button_text="@string/add_new_contact" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>